# NumPy_LR

./: README.md  homework.ipynb  linear_model.py  model_learning.py  predict_example.py  pyproject.toml  regression_learning.py
data/: movies.csv
dmia/: gradient_check.py
dmia/classifiers/: logistic_regression.py
